// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders correctly 1`] = `
<DocumentFragment>
  <div
    class="css-1qqflhf"
  >
    <table
      style="table-layout: fixed; width: 100%; text-align: left; border-collapse: collapse;"
    >
      <thead>
        <tr
          style="height: 48px;"
        >
          <th
            style="position: sticky; top: 0px; max-width: 100%; width: 100%; min-width: 100%; background-color: rgb(255, 255, 255); box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.12); z-index: 1;"
          >
            <div
              class="MuiBox-root css-semc09"
            >
              <div
                class="MuiBox-root css-j6zvzo"
              >
                <span
                  class="MuiTypography-root MuiTypography-overline css-szitil-MuiTypography-root"
                  title="Column 1"
                >
                  Column 1
                </span>
              </div>
              <div
                class="MuiBox-root css-9qc0eg"
              >
                <button
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                    data-testid="SwapVertIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16 17.01V10h-2v7.01h-3L15 21l4-3.99h-3zM9 3 5 6.99h3V14h2V6.99h3L9 3z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </th>
          <th
            style="position: sticky; top: 0px; max-width: 150px; width: 150px; min-width: 150px; background-color: rgb(255, 255, 255); box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.12); z-index: 1;"
          >
            <div
              class="MuiBox-root css-semc09"
            >
              <div
                class="MuiBox-root css-j6zvzo"
              >
                <span
                  class="MuiTypography-root MuiTypography-overline css-szitil-MuiTypography-root"
                  title="Column 2"
                >
                  Column 2
                </span>
              </div>
              <div
                class="MuiBox-root css-9qc0eg"
              >
                <button
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                    data-testid="SwapVertIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16 17.01V10h-2v7.01h-3L15 21l4-3.99h-3zM9 3 5 6.99h3V14h2V6.99h3L9 3z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </th>
          <th
            style="position: sticky; top: 0px; max-width: 50px; width: 50px; min-width: 50px; background-color: rgb(255, 255, 255); box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.12); z-index: 1;"
          >
            <div
              class="MuiBox-root css-1jjjjm8"
            >
              <div
                class="MuiBox-root css-j6zvzo"
              >
                <span
                  class="MuiTypography-root MuiTypography-overline css-szitil-MuiTypography-root"
                  title="[object Object]"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="AccountTreeIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M22 11V3h-7v3H9V3H2v8h7V8h2v10h4v3h7v-8h-7v3h-2V8h2v3z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          style="height: 48px;"
        >
          <td
            style="max-width: 100%; width: 100%; min-width: 100%;"
          >
            <div
              class="MuiStack-root css-1sg8hwy-MuiStack-root"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                  data-testid="KeyboardArrowRightIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
              <button
                class="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineNone MuiLink-button css-14wmvzk-MuiTypography-root-MuiLink-root"
                title="1-col1"
              >
                1-col1
              </button>
            </div>
          </td>
          <td
            style="max-width: 150px; width: 150px; min-width: 150px;"
          >
            <div
              class="MuiStack-root css-1d9cypr-MuiStack-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-foitbu-MuiTypography-root"
                title="1-col2"
              >
                1-col2
              </p>
            </div>
          </td>
          <td
            style="max-width: 50px; width: 50px; min-width: 50px;"
          >
            <div
              class="MuiStack-root css-1d9cypr-MuiStack-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-foitbu-MuiTypography-root"
                title=""
              />
            </div>
          </td>
        </tr>
        <tr
          style="display: none; height: 48px;"
        >
          <td
            style="max-width: 100%; width: 100%; min-width: 100%; box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.12);"
          >
            <div
              class="MuiStack-root css-kv8qlv-MuiStack-root"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                  data-testid="CheckBoxIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
              <p
                class="MuiTypography-root MuiTypography-body2 css-foitbu-MuiTypography-root"
                title="2-col1"
              >
                2-col1
              </p>
            </div>
          </td>
          <td
            style="max-width: 150px; width: 150px; min-width: 150px; box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.12);"
          >
            <div
              class="MuiStack-root css-1d9cypr-MuiStack-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-foitbu-MuiTypography-root"
                title="2-col2"
              >
                2-col2
              </p>
            </div>
          </td>
          <td
            style="max-width: 50px; width: 50px; min-width: 50px; box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.12);"
          >
            <div
              class="MuiStack-root css-1d9cypr-MuiStack-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-foitbu-MuiTypography-root"
                title="2-col3"
              >
                2-col3
              </p>
            </div>
          </td>
        </tr>
        <tr
          style="height: 48px;"
        >
          <td
            style="max-width: 100%; width: 100%; min-width: 100%; box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.12);"
          >
            <div
              class="MuiStack-root css-1sg8hwy-MuiStack-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-foitbu-MuiTypography-root"
                title="3-col1"
              >
                3-col1
              </p>
            </div>
          </td>
          <td
            style="max-width: 150px; width: 150px; min-width: 150px; box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.12);"
          >
            <div
              class="MuiStack-root css-1d9cypr-MuiStack-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-foitbu-MuiTypography-root"
                title="3-col2"
              >
                3-col2
              </p>
            </div>
          </td>
          <td
            style="max-width: 50px; width: 50px; min-width: 50px; box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.12);"
          >
            <div
              class="MuiStack-root css-1d9cypr-MuiStack-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-foitbu-MuiTypography-root"
                title=""
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="AccountTreeIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M22 11V3h-7v3H9V3H2v8h7V8h2v10h4v3h7v-8h-7v3h-2V8h2v3z"
                  />
                </svg>
              </p>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Table renders correctly 2`] = `
<DocumentFragment>
  <div
    class="css-1qqflhf"
  >
    <table
      style="table-layout: fixed; width: 100%; text-align: left; border-collapse: collapse;"
    >
      <thead>
        <tr
          style="height: 48px;"
        >
          <th
            style="position: sticky; top: 0px; max-width: 100%; width: 100%; min-width: 100%; background-color: rgb(255, 255, 255); box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.12); z-index: 1;"
          >
            <div
              class="MuiBox-root css-semc09"
            >
              <div
                class="MuiBox-root css-j6zvzo"
              >
                <span
                  class="MuiTypography-root MuiTypography-overline css-szitil-MuiTypography-root"
                  title="Column 1"
                >
                  Column 1
                </span>
              </div>
              <div
                class="MuiBox-root css-9qc0eg"
              >
                <button
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1uncdf-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                    data-testid="ArrowUpwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m4 12 1.41 1.41L11 7.830h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  >
                    <span
                      class="css-y4cjyz-MuiTouchRipple-ripple MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
                      style="width: 1px; height: 1px; top: -0.5px; left: -0.5px;"
                    >
                      <span
                        class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
                      />
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </th>
          <th
            style="position: sticky; top: 0px; max-width: 150px; width: 150px; min-width: 150px; background-color: rgb(255, 255, 255); box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.12); z-index: 1;"
          >
            <div
              class="MuiBox-root css-semc09"
            >
              <div
                class="MuiBox-root css-j6zvzo"
              >
                <span
                  class="MuiTypography-root MuiTypography-overline css-szitil-MuiTypography-root"
                  title="Column 2"
                >
                  Column 2
                </span>
              </div>
              <div
                class="MuiBox-root css-9qc0eg"
              >
                <button
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                    data-testid="SwapVertIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16 17.01V10h-2v7.01h-3L15 21l4-3.99h-3zM9 3 5 6.99h3V14h2V6.99h3L9 3z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </th>
          <th
            style="position: sticky; top: 0px; max-width: 50px; width: 50px; min-width: 50px; background-color: rgb(255, 255, 255); box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.12); z-index: 1;"
          >
            <div
              class="MuiBox-root css-1jjjjm8"
            >
              <div
                class="MuiBox-root css-j6zvzo"
              >
                <span
                  class="MuiTypography-root MuiTypography-overline css-szitil-MuiTypography-root"
                  title="[object Object]"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="AccountTreeIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M22 11V3h-7v3H9V3H2v8h7V8h2v10h4v3h7v-8h-7v3h-2V8h2v3z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          style="height: 48px;"
        >
          <td
            style="max-width: 100%; width: 100%; min-width: 100%;"
          >
            <div
              class="MuiStack-root css-1sg8hwy-MuiStack-root"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                  data-testid="KeyboardArrowRightIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
              <button
                class="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineNone MuiLink-button css-14wmvzk-MuiTypography-root-MuiLink-root"
                title="1-col1"
              >
                1-col1
              </button>
            </div>
          </td>
          <td
            style="max-width: 150px; width: 150px; min-width: 150px;"
          >
            <div
              class="MuiStack-root css-1d9cypr-MuiStack-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-foitbu-MuiTypography-root"
                title="1-col2"
              >
                1-col2
              </p>
            </div>
          </td>
          <td
            style="max-width: 50px; width: 50px; min-width: 50px;"
          >
            <div
              class="MuiStack-root css-1d9cypr-MuiStack-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-foitbu-MuiTypography-root"
                title=""
              />
            </div>
          </td>
        </tr>
        <tr
          style="display: none; height: 48px;"
        >
          <td
            style="max-width: 100%; width: 100%; min-width: 100%; box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.12);"
          >
            <div
              class="MuiStack-root css-kv8qlv-MuiStack-root"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                  data-testid="CheckBoxIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
              <p
                class="MuiTypography-root MuiTypography-body2 css-foitbu-MuiTypography-root"
                title="2-col1"
              >
                2-col1
              </p>
            </div>
          </td>
          <td
            style="max-width: 150px; width: 150px; min-width: 150px; box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.12);"
          >
            <div
              class="MuiStack-root css-1d9cypr-MuiStack-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-foitbu-MuiTypography-root"
                title="2-col2"
              >
                2-col2
              </p>
            </div>
          </td>
          <td
            style="max-width: 50px; width: 50px; min-width: 50px; box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.12);"
          >
            <div
              class="MuiStack-root css-1d9cypr-MuiStack-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-foitbu-MuiTypography-root"
                title="2-col3"
              >
                2-col3
              </p>
            </div>
          </td>
        </tr>
        <tr
          style="height: 48px;"
        >
          <td
            style="max-width: 100%; width: 100%; min-width: 100%; box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.12);"
          >
            <div
              class="MuiStack-root css-1sg8hwy-MuiStack-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-foitbu-MuiTypography-root"
                title="3-col1"
              >
                3-col1
              </p>
            </div>
          </td>
          <td
            style="max-width: 150px; width: 150px; min-width: 150px; box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.12);"
          >
            <div
              class="MuiStack-root css-1d9cypr-MuiStack-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-foitbu-MuiTypography-root"
                title="3-col2"
              >
                3-col2
              </p>
            </div>
          </td>
          <td
            style="max-width: 50px; width: 50px; min-width: 50px; box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.12);"
          >
            <div
              class="MuiStack-root css-1d9cypr-MuiStack-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-foitbu-MuiTypography-root"
                title=""
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="AccountTreeIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M22 11V3h-7v3H9V3H2v8h7V8h2v10h4v3h7v-8h-7v3h-2V8h2v3z"
                  />
                </svg>
              </p>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
